[tool.poetry]
name = "commonroad-velocity-planner"
version = "2024.1.0"
description = "CommonRoad Velocity Planner Toolbox"
authors = ["Tobias Mascetta <tobias.mascetta@tum.de>", "Kilian Northoff <kilian.northoff@tum.de"]
license = "BSD"
readme = "README.md"
packages = [{include = "commonroad_velocity_planner"}]


# Dependencies
[tool.poetry.dependencies]
python = "^3.9"
commonroad-io = ">=2022.2"
commonroad-route-planner = ">=2024.1"
numpy = ">=1.17.4"



# test
[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
coverage = "^6.5.0"

# docs
[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocstrings-python = "^1.8.0"
mkdocs-material = "^9.5.10"





[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
